--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-markov = { branch = "stable", git = "https://github.com/th0rex/markov_rs.git" }
+bincode = "1.2"
+hashbrown = { version = "0.6.0", features = [ "ahash", "serde" ] }
+jemallocator = "0.3.2"
+rand = "0.7"
+serde = "1.0"
+serde_derive = "1.0"
 serenity = { version = "0.7", features = [ "cache", "client", "gateway", "http", "model", "utils", "native_tls_backend" ] }
+zstd = "0.4"
