--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,9 @@ edition = "2018"
 bincode = "1.2"
 hashbrown = { version = "0.6.0", features = [ "ahash", "serde" ] }
 jemallocator = "0.3.2"
+lazy_static = "*"
 rand = "0.7"
+regex = "1.3"
 serde = "1.0"
 serde_derive = "1.0"
 serenity = { version = "0.7", features = [ "cache", "client", "gateway", "http", "model", "utils", "native_tls_backend" ] }
